--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment files
+.env
+.env.*
+*.local
+
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
